--- a/index.ipynb
+++ b/index.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
-    "SQL database uses \n",
+    "SQL database are relational and can sometimes be too so\n",
     "\n",
     "\n",
     "\n",
